fixed the banner view on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,9 @@ p {
       width: 150px;
     }
   }
+
+  @media screen and (max-width: 450px) {
+    body { 
+        padding-top: 50px; 
+    }
+  }
